--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Bubblegum+Sans|Bubbler+One&display=swap');
 HTML {
   background-color: #F5E1FD;
   background-image: url(assets/twinstars.png);
