--- a/style.css
+++ b/style.css
@@ -1,9 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Bubblegum+Sans|Bubbler+One&display=swap');
 HTML {
   background-color: #F5E1FD;
-  background-image: url(assets/twinstars.png);
-  background-repeat: no-repeat;
-  background-position: 100% -100%;
-  background-size: 100vh;
   overflow: hidden;
+}
+body {
+  margin: 20px;
+}
+img {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 60vw;
+}
+header {
+  text-align: center;
+}
+h1 {
+  font-family: 'Bubblegum Sans', cursive;
+  font-size: 4.5em;
+  margin-top: -10px;
+  color: #addbf5;
+  text-shadow: 5px 5px 0 #fff09d;
+}
+h2 {
+  font-family: 'Bubbler One', sans-serif;
+  font-size: 3em;
+  margin-top: -65px;
+  color: #f1adbc;
+  text-shadow: 3px 1px 0 #fff09d;
+  text-decoration: #addbf5;
+  text-decoration-line: underline;
+  font-weight: bolder;
 }
