--- a/style.css
+++ b/style.css
@@ -30,3 +30,7 @@ h2 {
   text-shadow: 3px 1px 0 #addbf5;
   text-decoration: #f1adbc;
 }
+button {
+  font-family: 'Bubblegum Sans', cursive;
+  
+}
