--- a/style.css
+++ b/style.css
@@ -97,10 +97,57 @@ button {
   transition: height 0.3s;
   background: rgba(0,0,0,0.5);
   cursor: ew-resize;
+  border-radius: 20px;
 }
 
 .progress__filled {
   width: 50%;
   background: #f1adbc;
+}
+input[type=range] {
+  -webkit-appearance: none;
+  background: transparent;
+  width: 30%;
+  margin-top: 8px;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 10%;
+  height: 8px;
+  cursor: pointer;
+  background: #fff09d;
+  border-radius: 20px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  height: 15px;
+  width: 15px;
+  border-radius: 50px;
+  background: #f1adbc;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -3.5px;
+}
+
+input[type=range]::-moz-range-track {
+  width: 10%;
+  height: 8px;
+  cursor: pointer;
+  background: #fff09d;
+  border-radius: 20px;
+}
+
+input[type=range]::-moz-range-thumb {
+  height: 15px;
+  width: 15px;
+  border-radius: 50px;
+  background: #f1adbc;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -3.5px;
 }
 
