--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ img {
   bottom: 0;
   right: 0;
   width: 52vw;
+  -webkit-filter: drop-shadow( 0 0 20px #f1adbc);
+  filter: drop-shadow( 0 0 20px #f1adbc);
 }
 header {
   text-align: center;
