--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ input[type=range]::-moz-range-thumb {
   -webkit-appearance: none;
   margin-top: -3.5px;
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
   img {
     position: fixed;
     bottom: 0;
